// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configuration preference - collapse categorized tracks 1`] = `
[
  "Reference sequence (volMyt1)",
]
`;

exports[`configuration preference - sorting categories 1`] = `
[
  "Tracks",
  "cat1",
  "cat2",
  "cat3",
  "cat4",
]
`;

exports[`configuration preference - sorting track names 1`] = `
[
  "Tracks",
  "cat1",
  "cat2",
  "cat3",
  "cat4",
]
`;

exports[`localstorage preference - collapse categorized tracks 1`] = `
[
  "Reference sequence (volMyt1)",
]
`;

exports[`localstorage preference - sorting categories 1`] = `
[
  "Tracks",
  "cat1",
  "cat2",
  "cat3",
  "cat4",
]
`;

exports[`localstorage preference - sorting track names 1`] = `
[
  "1 toplevel",
  "10 toplevel",
  "2 toplevel",
  "3 toplevel",
  "4 toplevel",
  "5 toplevel",
  "6 toplevel",
  "7 toplevel",
  "8 toplevel",
  "9 toplevel",
  "1 cat1",
  "10 cat1",
  "2 cat1",
  "3 cat1",
  "4 cat1",
  "5 cat1",
  "6 cat1",
  "7 cat1",
  "8 cat1",
  "9 cat1",
  "1 cat1 cat2",
  "10 cat1 cat2",
  "2 cat1 cat2",
  "3 cat1 cat2",
  "4 cat1 cat2",
  "5 cat1 cat2",
  "6 cat1 cat2",
  "7 cat1 cat2",
  "8 cat1 cat2",
  "9 cat1 cat2",
  "1 cat3",
  "2 cat3",
  "3 cat3",
  "4 cat3",
  "5 cat3",
  "1 cat3 cat4",
  "2 cat3 cat4",
  "3 cat3 cat4",
  "4 cat3 cat4",
  "5 cat3 cat4",
]
`;

exports[`sm categorized tracks 1`] = `
[
  "Reference sequence (volMyt1)",
  "fooC",
  "barC",
]
`;

exports[`sm uncategorized tracks 1`] = `
[
  "Reference sequence (volMyt1)",
  "fooC",
  "barC",
]
`;

exports[`unsorted categories 1`] = `
[
  "1 toplevel",
  "2 toplevel",
  "3 toplevel",
  "4 toplevel",
  "5 toplevel",
  "6 toplevel",
  "7 toplevel",
  "8 toplevel",
  "9 toplevel",
  "10 toplevel",
  "1 cat1",
  "2 cat1",
  "3 cat1",
  "4 cat1",
  "5 cat1",
  "6 cat1",
  "7 cat1",
  "8 cat1",
  "9 cat1",
  "10 cat1",
  "1 cat1 cat2",
  "2 cat1 cat2",
  "3 cat1 cat2",
  "4 cat1 cat2",
  "5 cat1 cat2",
  "6 cat1 cat2",
  "7 cat1 cat2",
  "8 cat1 cat2",
  "9 cat1 cat2",
  "10 cat1 cat2",
  "1 cat3",
  "2 cat3",
  "3 cat3",
  "4 cat3",
  "5 cat3",
  "1 cat3 cat4",
  "2 cat3 cat4",
  "3 cat3 cat4",
  "4 cat3 cat4",
  "5 cat3 cat4",
]
`;
